--- a/Login.html
+++ b/Login.html
@@ -16,7 +16,7 @@
         <a class="navbar-brand" href="#"><img src="VVIT_logo.svg" alt="logo" class="logo w-25"/></a>
     </div>
     <ul class="nav-links">
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">Login</a></li>
         <li><a href="#">SignUp</a></li>
         <li><a href="#">About US</a></li>
