--- a/user_profile.html
+++ b/user_profile.html
@@ -18,7 +18,7 @@
         <a class="navbar-brand" href="#"><img src="VVIT_logo.svg" alt="logo" class="logo w-25"/></a>
     </div>
     <ul class="nav-links">
-        <li><a href="#">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="#">Login</a></li>
         <li><a href="#">Sign Up</a></li>
         <li><a href="#">About US</a></li>
@@ -57,6 +57,7 @@
 
                     </div>
                     <div class="card-body pt-0">
+                        <form>
                         <table class="table table-bordered">
                             <tr>
                             <tr>
@@ -120,7 +121,7 @@
                                 </label></td>
                             </tr>
                         </table>
-
+                        </form>
                     </div>
                     <div class="d-flex flex-row justify-content-center mb-4">
                     <button class="btn btn-primary" onclick="saveButton()">Save</button>
